Working infinite roller-coaster

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,10 @@ set(CMAKE_CXX_STANDARD 14)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-add_executable(TP1_IFT630 main.cpp)
 add_executable(philo_sem philosophers.cpp)
-add_executable(barber_sem barber.cpp)
+add_executable(barber_sem barber_sem.cpp)
+add_executable(roller_coaster_sem roller_coaster_sem.cpp)
 
-target_link_libraries(TP1_IFT630 Threads::Threads)
 target_link_libraries(philo_sem Threads::Threads)
 target_link_libraries(barber_sem Threads::Threads)
+target_link_libraries(roller_coaster_sem Threads::Threads)
